<resources>
    <string-array name="language_options">
        <item>Português</item>
        <item>English</item>
    </string-array>
    <string name="app_name" translatable="false">TrailSnap</string>
    <string name="title_home">Página Inicial</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificações</string>
    <string name="walk_name_title">Nome da caminhada:</string>
    <string name="walk_hint">Insira o nome da caminhada</string>
    <string name="start_walk_button">Iniciar Caminhada</string>
    <string name="my_groups">Os Meus Grupos</string>
    <string name="group_invites">Convites de Grupo</string>
    <string name="next_achievements">Próximas Conquistas</string>
    <string name="image_select_button">Selecionar Imagem</string>
    <string name="username_hint">Nome de Utilizador</string>
    <string name="save_button">Guardar</string>
    <string name="description_hint">Descrição</string>
    <string name="walk_photo">Foto Atual</string>
    <string name="walk_name">Nome</string>
    <string name="save_walk_button">Guardar Caminhada</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="login_button">Iniciar Sessão</string>
    <string name="confirm_password_hint">Confirmar Password</string>
    <string name="register_button">Registar</string>
    <string name="finish_walk_button">Finalizar Caminhada</string>
    <string name="edit_button">Editar</string>
    <string name="settings_text">Definições</string>
    <string name="language_text">Idioma</string>
    <string name="theme_text">Tema</string>
    <string name="dark_mode_text">Modo Escuro</string>
    <string name="telemetry_text">Telemetria</string>
    <string name="accelerometer_text">Acelerometro</string>
    <string name="gps_text" translatable="false">GPS</string>
    <string name="already_have_account">Já tem conta? Inicie Sessão!</string>
    <string name="dashboard">Página Inicial</string>
    <string name="achievements">Conquistas</string>
    <string name="add_walk">Adicionar Caminhada</string>
    <string name="fragment_edit_profile">Editar Perfil</string>
    <string name="register_fragment">Registar Utilizador</string>
    <string name="fragment_login">Iniciar Sessão</string>
    <string name="fragment_app_settings">Definições da Aplicação</string>
    <string name="fragment_walk">Progresso de Caminhada</string>
    <string name="fragment_edit_walk">Editar Caminhada</string>
    <string name="fragment_walk_details">Detalhes da Caminhada</string>
    <string name="profile">Perfil</string>
    <string name="history">História</string>
    <string name="birthday_hint">Data de Nascimento</string>
    <string name="apply_settings_button">Aplicar Definições</string>
    <string name="profile_photo">Foto de Perfil</string>
    <string name="login_successful">Sessão Iniciada com Sucesso!</string>
    <string name="invalid_credentials">Credenciais Inválidas!</string>
    <string name="user_registered_successfully">Utilizador registado com sucesso!\n</string>
    <string name="passwords_do_not_match">As passwords introduzidas não coincidem!</string>
    <string name="add_photo_button">Adicionar Foto</string>
    <string name="total_distance_text">Distância Total: %1$.2f km</string>
    <string name="total_walks_text">Caminhadas Totais: %d</string>
    <string name="no_achievements">Sem conquistas para mostrar</string>
    <string name="user_not_found">Utilizador não encontrado!</string>
    <string name="dist_ncia_2f_km">Distância: %.2f km</string>
    <string name="total_time">Tempo Total: %1$s</string>
    <string name="no_walk_found">Nenhuma Caminhada Localizada</string>
    <string name="profile_updated_successfully">Perfil Atualizado com Sucesso</string>
    <string name="failed_to_update_profile">Falha ao Atualizar Perfil</string>
    <string name="walk_name_empty">O nome da caminhada não pode estar vazio.</string>
    <string name="walk_update">Caminhada atualizada com sucesso!</string>
    <string name="walk_saved">Caminhada guardada com sucesso!</string>
    <string name="walk_distance">Distância</string>
    <string name="walk_time">Tempo Total</string>
    <string name="achievement_name">Nome da Conquista</string>
    <string name="achievement_description">Descrição da Conquista</string>
    <string name="achievement_status">Status (Desbloqueada/Em Progresso)</string>
    <string name="start_distance" translatable="false">0 m</string>
    <string name="start_time" translatable="false">00:00:00</string>
    <string name="total_walk_time">Tempo:</string>
    <string name="total_walk_distance">Distância:</string>
    <string name="logout_text">Terminar Sessão</string>
    <string name="create_account_text">Não tem conta? Crie uma!</string>
    <string name="fill_all_fields">Por favor preencha todos os campos</string>
    <string name="register_error">Erro ao registar utilizador</string>
    <string name="password_not_match">Passwords não são iguais</string>
    <string name="walk_not_found">Caminhada não encontrada.</string>
    <string name="total_walks">Caminhadas:</string>
    <string name="achievement_first_kilometer">Primeiro Quilômetro</string>
    <string name="achievement_first_kilometer_desc">Caminhou 1 quilômetro</string>
    <string name="achievement_first_5k">Primeiros 5 Quilômetros</string>
    <string name="achievement_first_5k_desc">Caminhou 5 quilômetros</string>
    <string name="achievement_10k_milestone">Marco dos 10 quilômetros</string>
    <string name="achievement_10k_milestone_desc">Caminhou 10 quilômetros</string>
    <string name="achievement_half_marathon">Meia Maratona</string>
    <string name="achievement_half_marathon_desc">Caminhou 25 quilômetros</string>
    <string name="achievement_full_marathon">Maratona Completa</string>
    <string name="achievement_full_marathon_desc">Caminhou 50 quilômetros</string>
    <string name="achievement_century_walker">Caminhante do Século</string>
    <string name="achievement_century_walker_desc">Caminhou 100 quilômetros</string>
    <string name="achievement_super_walker">Super Caminhante</string>
    <string name="achievement_super_walker_desc">Caminhou 250 quilômetros</string>
    <string name="achievement_explorer">Explorador</string>
    <string name="achievement_explorer_desc">Caminhou 500 quilômetros</string>
    <string name="achievement_walking_pro">Profissional da Caminhada</string>
    <string name="achievement_walking_pro_desc">Caminhou 1.000 quilômetros</string>
    <string name="achievement_first_walk">Primeira Caminhada</string>
    <string name="achievement_first_walk_desc">Concluiu sua primeira caminhada</string>
    <string name="achievement_first_5w">Primeiras 5 Caminhadas</string>
    <string name="achievement_first_5w_desc">Concluiu 5 caminhadas</string>
    <string name="achievement_10w_milestone">Marco das 10 Caminhadas</string>
    <string name="achievement_10w_milestone_desc">Concluiu 10 caminhadas</string>
    <string name="achievement_25_walks">25 Caminhadas</string>
    <string name="achievement_25_walks_desc">Concluiu 25 caminhadas</string>
    <string name="achievement_walking_enthusiast">Entusiasta da Caminhada</string>
    <string name="achievement_walking_enthusiast_desc">Concluiu 50 caminhadas</string>
    <string name="achievement_walking_fanatic">Fanático da Caminhada</string>
    <string name="achievement_walking_fanatic_desc">Concluiu 100 caminhadas</string>
    <string name="achievement_walking_maniac">Maníaco da Caminhada</string>
    <string name="achievement_walking_maniac_desc">Concluiu 250 caminhadas</string>
    <string name="achievement_walking_machine">Máquina de Caminhada</string>
    <string name="achievement_walking_machine_desc">Concluiu 500 caminhadas</string>
    <string name="achievement_walking_legend">Lenda da Caminhada</string>
    <string name="achievement_walking_legend_desc">Concluiu 1.000 caminhadas</string>

</resources>