<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.profile.EditProfileFragment">

    <ImageView
        android:id="@+id/edit_user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_user_placeholder"
        android:layout_marginBottom="16dp"
        tools:ignore="ContentDescription" />
    <Button
        android:id="@+id/button_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_select_button"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_user_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday_hint"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_gravity="center" />
</LinearLayout>