<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/item_walk_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_walk_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_distance"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_walk_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_time"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/item_photo_path"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:contentDescription="@string/walk_photo"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars" />

</LinearLayout>
