<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.walk.WalkDetailsFragment">

    <TextView
        android:id="@+id/walkNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/walk_photo"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/walkNameDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/distanteUsedDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_distance"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/timeUsedDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_time"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/distanteUsedDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        app:layout_constraintTop_toBottomOf="@id/timeUsedDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
