<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.walk.EditWalkFragment">

    <TextView
        android:id="@+id/actualNameWalk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/walk_name_title"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editNameWalk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/walk_name"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/actualNameWalk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_walk_distance"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/editNameWalk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/elapsedTimeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_walk_time"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/distanceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/actualPhotoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/walk_photo"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/elapsedTimeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/walk_photo"
        app:layout_constraintTop_toBottomOf="@id/actualPhotoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/addPhotoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_button"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="64dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_walk_button"
        app:layout_constraintTop_toBottomOf="@id/addPhotoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
