<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.walk.AddWalkFragment">

    <!-- Título: Nome da Caminhada -->
    <TextView
        android:id="@+id/nameWalk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/walk_name_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Campo de Entrada: Nome da Caminhada -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWalkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameWalk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditWalkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/walk_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botão: Iniciar Caminhada -->
    <Button
        android:id="@+id/startWalk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_walk_button"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutWalkName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
